--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         
 
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-        <script src="src/js/actor.js"></script>    
+        <script src="src/index.js"></script>    
+        
     </body>
 </html>
