Se activa busqueda

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
         <header class="encabezado">
             <img src="src/img/pokemonLogo.png" alt="Netflix" class="encabezadologo" id="logo">
         </header>
+        <div class="buscador">     
+            <p class="textobuscar">buscar</p>
+            <input type="text" placeholder="ID o Nombre" id="pokebusqueda">
+        <button type="submit" id="btnBuscarPoke">Buscar</button>
+</div>
             <div class="contenido">
+
+
                 <div class="contenedorPerfil">
-                    <div class="div-Buscar">
-                        <div class="contenidoBuscar">
-                            <p>buscar</p>
-                        </div>
-                        <div class="contenidoBuscar">
-                            <input type="text" placeholder="ID o Nombre">
-                        </div>
-                    </div>
+                    
                     <div>
                         <h1 class="detallePokemon asd">Caracteristicas Pokemon</h1>
                         <div>
@@ -57,9 +57,7 @@
                     </div>
                 </div>
                 <div class="contenedorPokemon-Imagen">
-                    <div class="div-ButtonBuscar">
-                        <button type="submit">Buscar</button>
-                    </div>
+                    
                     <h1 class="TituloimagenPokemon cardImagenPoke" id="imagenPokemon">Imagen Pokemon</h1>
                     <img class="imagenPoke cardImagenPoke" id="imagenpoke">
                 </div>
