feat: se realiza diseño responsivo del navbar

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </form>
             </div>
 
-            <div class="btn-group alinearRegiones" role="group" aria-label="Basic radio toggle button group"  >
+            <div class="btn-group alinearRegiones regiones" role="group" aria-label="Basic radio toggle button group"  >
                 <input type="radio" class="btn-check" name="btnradio" id="btnKanto" autocomplete="off" checked > 
                 <label class="btn btn-outline-danger" for="btnKanto">Kanto</label>
               
