--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
 
             <div class="btn-group alinearRegiones regiones" role="group" aria-label="Basic radio toggle button group"  >
-                <input type="radio" class="btn-check" name="btnradio" id="btnKanto" autocomplete="off" checked > 
+                <input type="radio" class="btn-check" name="btnradio" id="btnKanto" autocomplete="off" > 
                 <label class="btn btn-outline-danger" for="btnKanto">Kanto</label>
               
                 <input type="radio" class="btn-check" name="btnradio" id="btnJohto" autocomplete="off">
